# CDT

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  ExternalTools.cmake
include/: Grid.h  Triangulation.h  Vector2.h
include/Utils/: Vector2.h
src/: Grid.cpp  Triangulation.cpp
src/CDTDemo/: main.cpp
src/Tests/: main.cpp  test_cdt.cc  test_geometry.cc  test_vecs.cc
